added a copy to clipboard function and random smiley

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "react-scripts": "0.8.4"
   },
   "dependencies": {
+    "clipboard": "^1.5.16",
     "react": "^15.4.1",
+    "react-clipboard.js": "^1.0.1",
     "react-dom": "^15.4.1",
     "react-share": "^1.11.0"
   },
